--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,9 @@
         <module>JavaMemoryLayout</module>
     </modules>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
 </project>
